Prevent empty divs from collapsing
by setting min-height

--- a/templates/css/source/gv-default-styles.scss
+++ b/templates/css/source/gv-default-styles.scss
@@ -33,6 +33,7 @@
 [class*='gv-grid-col-'] {
 	float: left;
 	padding-right: 1em;
+	min-height:1px;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
